--- a/desktop-themes/Green-Undersea/ctk-3.0/ctk.css
+++ b/desktop-themes/Green-Undersea/ctk-3.0/ctk.css
@@ -291,8 +291,8 @@
 /* inactive-pane caja */
 @define-color inactive-pane_bg_color #E5E5E5;
 
-@import url("gtk-widgets.css");
-@import url("gtk-widgets-assets.css");
+@import url("ctk-widgets.css");
+@import url("ctk-widgets-assets.css");
 @import url("menu.css");
 @import url("scrollbar.css");
 @import url("sidebar.css");
