--- a/desktop-themes/Green-Undersea/ctk-3.0/scrollbar.css
+++ b/desktop-themes/Green-Undersea/ctk-3.0/scrollbar.css
@@ -14,13 +14,13 @@ scrollbar {
 
 /* broken firefox ignore background of trough */
 scrollbar.horizontal {
-    background-image: -gtk-gradient (linear, left top, right top,
+    background-image: -ctk-gradient (linear, left top, right top,
                                      from (shade (@theme_bg_color, 0.98)),
                                      to (shade (@theme_bg_color, 1.06)));
 }
 
 scrollbar.vertical {
-    background-image: -gtk-gradient (linear, left top, left bottom,
+    background-image: -ctk-gradient (linear, left top, left bottom,
                                      from (shade (@theme_bg_color, 0.98)),
                                      to (shade (@theme_bg_color, 1.06)));
 }
@@ -37,7 +37,7 @@ scrollbar.horizontal {
 
 scrollbar.vertical trough {
     min-width: 13px;
-    background-image: -gtk-gradient (linear, left top, left bottom,
+    background-image: -ctk-gradient (linear, left top, left bottom,
                                      from (shade (@theme_bg_color, 0.98)),
                                      to (shade (@theme_bg_color, 1.06)));
     border-radius: 0;
@@ -47,7 +47,7 @@ scrollbar.vertical trough {
 
 scrollbar.horizontal trough {
     min-height: 13px;
-    background-image: -gtk-gradient (linear, left top, right top,
+    background-image: -ctk-gradient (linear, left top, right top,
                                      from (shade (@theme_bg_color, 0.98)),
                                      to (shade (@theme_bg_color, 1.06)));
     border-radius: 0;
@@ -65,7 +65,7 @@ scrollbar.vertical .slider {
     min-width: 13px;
     min-height: 31px;
     margin: 1px -1px 1px -1px;
-    background-image: -gtk-gradient (linear, left top, left bottom,
+    background-image: -ctk-gradient (linear, left top, left bottom,
                                      from (shade (@theme_bg_color, 0.95)),
                                      to (shade (@theme_bg_color, 0.8)));
     border-color: shade(@button_border, 1.13);
@@ -78,7 +78,7 @@ scrollbar.vertical slider:hover,
 scrollbar.vertical slider:hover:active,
 scrollbar.vertical .slider:hover,
 scrollbar.vertical .slider:hover:active {
-    background-image: -gtk-gradient (linear, left top, left bottom,
+    background-image: -ctk-gradient (linear, left top, left bottom,
                                      from (shade (@theme_bg_color, 0.7)),
                                      to (shade (@theme_bg_color, 0.85)));
     border-color: shade (@theme_bg_color, 0.85);
@@ -88,7 +88,7 @@ scrollbar.horizontal slider,
 scrollbar.horizontal .slider {
     min-width: 31px;
     min-height: 13px;
-    background-image: -gtk-gradient (linear, left top, right top,
+    background-image: -ctk-gradient (linear, left top, right top,
                                      from (shade (@theme_bg_color, 0.95)),
                                      to (shade (@theme_bg_color, 0.8)));
     border-color: shade(@button_border, 1.13);
@@ -101,7 +101,7 @@ scrollbar.horizontal slider:hover,
 scrollbar.horizontal slider:hover:active,
 scrollbar.horizontal .slider:hover,
 scrollbar.horizontal .slider:hover:active {
-    background-image: -gtk-gradient (linear, left top, right top,
+    background-image: -ctk-gradient (linear, left top, right top,
                                      from (shade (@theme_bg_color, 0.7)),
                                      to (shade (@theme_bg_color, 0.85)));
     border-color: shade (@theme_bg_color, 0.85);
@@ -144,7 +144,7 @@ scrollbar .button:disabled {
 
 /* broken firefox */
 scrollbar .button {
-    background-image: -gtk-gradient (linear,
+    background-image: -ctk-gradient (linear,
                                      left top, left bottom,
                                      from (@button_gradient1),
                                      color-stop (0.50, @button_gradient3),
@@ -160,26 +160,26 @@ scrollbar .button:hover:active {
 
 scrollbar.vertical button.up,
 scrollbar.vertical .button.up {
-    -gtk-icon-source: -gtk-icontheme("pan-up-symbolic");
-    -gtk-icon-effect: highlight;
+    -ctk-icon-source: -ctk-icontheme("pan-up-symbolic");
+    -ctk-icon-effect: highlight;
 }
 
 scrollbar.vertical button.down,
 scrollbar.vertical .button.down {
-    -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
-    -gtk-icon-effect: highlight;
+    -ctk-icon-source: -ctk-icontheme("pan-down-symbolic");
+    -ctk-icon-effect: highlight;
 }
 
 scrollbar.horizontal button.up,
 scrollbar.horizontal .button.up {
-    -gtk-icon-source: -gtk-icontheme("pan-start-symbolic");
-    -gtk-icon-effect: highlight;
+    -ctk-icon-source: -ctk-icontheme("pan-start-symbolic");
+    -ctk-icon-effect: highlight;
 }
 
 scrollbar.horizontal button.down,
 scrollbar.horizontal .button.down {
-    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
-    -gtk-icon-effect: highlight;
+    -ctk-icon-source: -ctk-icontheme("pan-end-symbolic");
+    -ctk-icon-effect: highlight;
 }
 
 scrollbar button,
