--- a/desktop-themes/Green-Undersea/ctk-3.0/sidebar.css
+++ b/desktop-themes/Green-Undersea/ctk-3.0/sidebar.css
@@ -58,7 +58,7 @@ placessidebar.sidebar.frame viewport.frame list row.activatable.sidebar-row reve
     border-width: 1px 0px 0px 0px;
     border-color: shade (@sidebar_selected_bg, 0.90) #bbb shade (@sidebar_selected_bg, 1.05);
     border-radius: 3px;
-    background-image: -gtk-gradient (linear,
+    background-image: -ctk-gradient (linear,
                                      left top,
                                      left bottom,
                                      from (shade(@sidebar_selected_bg, 0.90)),
@@ -71,7 +71,7 @@ placessidebar.sidebar.frame viewport.frame list row.activatable.sidebar-row reve
 .sidebar row:hover,
 .sidebar .view row:hover,
 .sidebar treeview row:hover {
-    background-image: -gtk-gradient (linear,
+    background-image: -ctk-gradient (linear,
                                      left top,
                                      left bottom,
                                      from (shade(@theme_bg_color, 1.05)),
