--- a/desktop-themes/Green-Undersea/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/Green-Undersea/ctk-3.0/cafe-applications.css
@@ -502,7 +502,7 @@ CafePanelAppletFrameDBus > CafePanelAppletFrameDBus {
 }
 
 /* outlines */
-window.background, /* selector where outlines are writen on GtkTrayIcon */
+window.background, /* selector where outlines are writen on CtkTrayIcon */
 .cafe-panel-menu-bar menubar,
 .cafe-panel-menu-bar button,
 .cafe-panel-menu-bar PanelApplet {
@@ -1122,8 +1122,8 @@ vte-terminal {
     border-color: transparent;
     padding: 3px;
     box-shadow: none;
-    -GtkWidget-window-dragging: true;
-    -GtkToolbar-button-relief: normal;
+    -CtkWidget-window-dragging: true;
+    -CtkToolbar-button-relief: normal;
     color: @theme_fg_dark_color;
 }
 
