--- a/desktop-themes/GreenLagoon/ctk-3.0/window-controls.css
+++ b/desktop-themes/GreenLagoon/ctk-3.0/window-controls.css
@@ -135,7 +135,7 @@ headerbar .left:dir(rtl) button.close.titlebutton:backdrop:hover {
 
 .titlebar button.close.titlebutton {
     /* fake request     to avoid usage of regular window-close button*/
-    -gtk-icon-style: requested;
+    -ctk-icon-style: requested;
 }
 
 /* Menu button when fallback kicks in (XFCE, Cinnamon etc.) */
