--- a/desktop-themes/GreenLagoon/ctk-3.0/ctk-main.css
+++ b/desktop-themes/GreenLagoon/ctk-3.0/ctk-main.css
@@ -190,8 +190,8 @@
 /* inactive-pane caja */
 @define-color inactive-pane_bg_color #D9DCD8;
 
-@import url("gtk-widgets.css");
-@import url("gtk-widgets-assets.css");
+@import url("ctk-widgets.css");
+@import url("ctk-widgets-assets.css");
 @import url("gnome-applications.css");
 @import url("unity.css");
 @import url("other-applications.css");
