--- a/desktop-themes/GreenLagoon/ctk-3.0/gnome-applications.css
+++ b/desktop-themes/GreenLagoon/ctk-3.0/gnome-applications.css
@@ -66,7 +66,7 @@ RBSource .cell.image {
 /* nautilus view */
 .nautilus-window > grid > paned.horizontal scrolledwindow {
     background-color: shade(@base_color, 1.04);
-    -gtk-icon-style: regular;
+    -ctk-icon-style: regular;
     border-style: solid;
     border-color: alpha(@frame_color, 0.6);
     border-width: 0px 1px 1px 1px;
@@ -100,7 +100,7 @@ RBSource .cell.image {
     border-color: alpha(@frame_color, 0.6);
     border-width: 0px 1px 1px 1px;
     border-radius: 2px;
-    -gtk-icon-style: regular;
+    -ctk-icon-style: regular;
     padding: 0;
 }
 
