--- a/desktop-themes/GreenLagoon/ctk-3.0/unity.css
+++ b/desktop-themes/GreenLagoon/ctk-3.0/unity.css
@@ -27,7 +27,7 @@ UnityDecoration.top {
 
     background-color: transparent;
     background-clip: border-box;
-    background-image: -gtk-gradient (linear, left top, left bottom,
+    background-image: -ctk-gradient (linear, left top, left bottom,
                                      from (shade (@theme_bg_color, 1.5)),
                                      to (@theme_bg_color));
 
@@ -39,7 +39,7 @@ UnityDecoration.top:backdrop {
     border: 0px;
     border-bottom-width: 0;
     background-color: transparent;
-    background-image: -gtk-gradient (linear, left top, left bottom,
+    background-image: -ctk-gradient (linear, left top, left bottom,
                                      from (shade (@theme_bg_color, 1.05)),
                                      to (@theme_bg_color));
     color: #808080;
@@ -60,7 +60,7 @@ UnityDecoration.bottom:backdrop {
 UnityPanelWidget,
 .unity-panel {
     background-color: transparent;
-    background-image: -gtk-gradient (linear, left top, left bottom,
+    background-image: -ctk-gradient (linear, left top, left bottom,
                                      from (#6A8175),
                                      to (#343F39));
 
@@ -74,7 +74,7 @@ UnityPanelWidget,
 .unity-panel.menuitem,
 .unity-panel .menuitem {
     border-width: 1px 1px 0 1px;
-    -gtk-icon-shadow: 0 -1px #000000;
+    -ctk-icon-shadow: 0 -1px #000000;
 }
 
 .unity-panel.menubar:backdrop,
@@ -84,7 +84,7 @@ UnityPanelWidget,
 
 .unity-panel.menubar.menuitem:hover,
 .unity-panel.menubar .menuitem *:hover {
-    background-image: -gtk-gradient (linear, left top, left bottom,
+    background-image: -ctk-gradient (linear, left top, left bottom,
                                      from (shade(@theme_selected_bg_color, 1.6)),
                                      to (shade(@theme_selected_bg_color, 0.6)));
 }
